--- a/src/components/Input/styles.css
+++ b/src/components/Input/styles.css
@@ -8,6 +8,12 @@
     font-size: 15px;
 } */
 
+.input-container {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+}
+
 .main-input {
     width: 300px;
     height: 50px;
@@ -16,4 +22,8 @@
     border: 1px solid black;
     border-radius: 4px;
     font-size: 18px;
+}
+
+.input-container > label {
+    font-size: 20px;
 }
