--- a/src/homeworks/Homework08/styles.css
+++ b/src/homeworks/Homework08/styles.css
@@ -3,14 +3,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 50px;
+    gap: 30px;
     flex: 1;
     padding: 40px;
-    background-color: rgb(91, 201, 18);
-    font-size: 40px;
+    background-color: rgb(203, 188, 219);
 }
 
-.input-container {
+/* .input-container {
     position: relative;
     right: 44px;
+} */
+
+.result-container {
+    font-size: 24px;
+    font-weight: bold;
+     color: rgb(46, 46, 75);
 }
